rock,paper,scissors 1.0

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 
 
 <body>
+
+    <h1> Rock-Paper-Scissors </h1>
+
+    <h2>best out of 5 wins</h2>
+
+    <div>
+
+        <button class="rock"></button>
+        <button class="paper"></button>
+        <button class="scissors"></button>
+
+    </div>
     
 </body>
 
