--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 <body>
 
-    <h1> Rock-Paper-Scissors </h1>
+    <h1 class="title"> Rock-Paper-Scissors </h1>
 
-    <h2>best out of 5 wins</h2>
+    <h2 id="winner-prompt">best out of 5 wins</h2>
 
-    <div>
+    <div class="button-section""">
 
         <button class="rock"></button>
         <button class="paper"></button>
