--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,13 +7,24 @@
     <title>Rock-Paper-Scissors</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js"defer></script>
 
 </head>
 
 
 <body>
 
+    <div id="container">
+
+        <h1 id="computer-selection">computer:</h1>
+        <h1 id="plays-selection">player:</h1>
+        <h1 id="result">result:</h1>
+
+        <button id="ROCK">Rock</button>
+        <button id="PAPER">paper</button>
+        <button id="SCISSORS">scissors</button>
+
+    </div>
 
     
 </body>
